tests/compile-fail/unaligned_pointers/unaligned_ptr3.stderr
error: Undefined Behavior: accessing memory with alignment 4, but alignment 8 is required
  --> $DIR/unaligned_ptr3.rs:10:27
   |
LL |         let _x = unsafe { *x }; //~ERROR but alignment
   |                           ^^ accessing memory with alignment 4, but alignment 8 is required
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/unaligned_ptr3.rs:10:27

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

